Updated CSS styles for mobile responsiveness in media740.css, added max-width to reviews cards, and defined dimensions for reviews dots. Enhanced media1570.css with overflow-x hidden for body and container to prevent horizontal scrolling. Adjusted tariffs-dot dimensions in style.css for consistency across elements.

--- a/freelance/wedding/media1570.css
+++ b/freelance/wedding/media1570.css
@@ -7,9 +7,14 @@
         display: flex;
     }
 
+    body {
+        overflow-x: hidden;
+    }
+
     .container {
         padding-right: 30px;
         padding-left: 30px;
+        overflow-x: hidden;
     }
 
     .center-header h1 {
