--- a/freelance/wedding/style.css
+++ b/freelance/wedding/style.css
@@ -1775,8 +1775,8 @@ footer {
 }
 
 .tariffs-dot {
-    width: 8px;
-    height: 8px;
+    width: 12px;
+    height: 12px;
     border-radius: 50%;
     background: rgba(249, 15, 74, 0.3);
     cursor: pointer;
